finalizando o projeto Cordel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>CORDEL MODERNO</h1>
+        <h1>Cordel Moderno</h1>
         <p>Por <strong><a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></strong></p>
     </header>
         <section class="normal">
@@ -30,7 +30,7 @@
                 Vou dizer tudo em poesia.
             </p>
         </section>
-        <section class="imagem" id="img1">
+        <section class="imagem" id="img01">
             <p>
                 Não é mais como era antes
                 <br>
@@ -79,7 +79,7 @@
                 Decifre esse rabisco.
             </p>
         </section>
-        <section class="imagem" id="img2">
+        <section class="imagem" id="img02">
             <p>
                 Tenho saudade das cartas
                 <br>
@@ -131,7 +131,7 @@
                 <h2>Confira também o Cordel narrado:</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ePPNliWMnoM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </aside>
-        </section>
+0        </section>
     <footer>
         <p>Site criado por <strong><a href="https://github.com/gabrielbuttendorf" target="_blank" rel="external">Gabriel Felipe Buttendorf</a></strong> para o curso de HTML e CSS do <strong><a href="https://www.cursoemvideo.com/" target="_blank" rel="external">CursoemVideo</a></strong></p>
     </footer>
