--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h2>Confira também o Cordel narrado:</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ePPNliWMnoM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </aside>
-0        </section>
+        </section>
     <footer>
         <p>Site criado por <strong><a href="https://github.com/gabrielbuttendorf" target="_blank" rel="external">Gabriel Felipe Buttendorf</a></strong> para o curso de HTML e CSS do <strong><a href="https://www.cursoemvideo.com/" target="_blank" rel="external">CursoemVideo</a></strong></p>
     </footer>
